# allgebra

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  WSL.md  annotations.Dockerfile  clang-format.Dockerfile  clang11_cuda10_1.Dockerfile  clang11gcc7.mk  common.mk  cuda10_2.Dockerfile  cuda11_0.Dockerfile  doxygen.Dockerfile  gcc10.mk  mkl.Dockerfile  oss.Dockerfile  release.Dockerfile
allgebra_in/: Dockerfile.clang.in  Dockerfile.mkl.in  Dockerfile.oss.in  Makefile.in  gen_allgebra.sh
allgebra_template/: Dockerfile.clang.in  Dockerfile.cuda.in  Dockerfile.gcc.in  Dockerfile.mkl.in  Dockerfile.oss.in  gen_allgebra.sh
allgebra_template/cuda11_6/: Dockerfile
allgebra_template/cuda11_6/clang13/: Makefile
allgebra_template/cuda11_6/clang13/mkl/: Makefile
allgebra_template/cuda11_6/clang13/oss/: Dockerfile
allgebra_template/cuda11_6/gcc10/: Dockerfile
allgebra_template/cuda11_6/gcc10/mkl/: Dockerfile  Makefile
allgebra_template/cuda11_6/gcc10/oss/: Dockerfile
clang-format/: Dockerfile  Makefile  check-format.sh
clang11gcc7/cuda10_1/mkl/: Dockerfile  Makefile  test.sh
clang11gcc7/cuda10_1/oss/: Dockerfile  Makefile
cuda10_1/: Dockerfile  Makefile
cuda10_1/clang11gcc7/: Dockerfile  Makefile
cuda10_1/clang11gcc7/mkl/: Dockerfile  Makefile
cuda10_1/clang11gcc7/oss/: Dockerfile  Makefile
cuda10_1/clang12/: Dockerfile  Makefile
cuda10_1/clang12/mkl/: Dockerfile  Makefile
cuda10_1/clang12/oss/: Dockerfile  Makefile
cuda10_2/: Dockerfile  Makefile
cuda10_2/gcc10/: Dockerfile  Makefile
cuda10_2/gcc10/mkl/: Dockerfile  Makefile
cuda10_2/gcc10/oss/: Dockerfile  Makefile
cuda11_0/: Dockerfile  Makefile
cuda11_0/gcc10/: Dockerfile  Makefile
cuda11_0/gcc10/mkl/: Dockerfile  Makefile
cuda11_0/gcc10/oss/: Dockerfile  Makefile
cuda11_4/: Dockerfile  Makefile
cuda11_4/clang12/: Dockerfile  Makefile
cuda11_4/clang12/mkl/: Dockerfile  Makefile
cuda11_4/clang12/oss/: Dockerfile  Makefile
cuda11_4/clang13/: Dockerfile  Makefile
cuda11_4/clang13/mkl/: Dockerfile  Makefile
cuda11_4/clang13/oss/: Dockerfile  Makefile
cuda11_4/gcc10/: Dockerfile  Makefile
cuda11_4/gcc10/mkl/: Dockerfile  Makefile
cuda11_4/gcc10/oss/: Dockerfile
cuda11_6/: Dockerfile  Makefile
cuda11_6/clang13/: Dockerfile
cuda11_6/clang13/mkl/: Dockerfile
cuda11_6/clang13/oss/: Dockerfile  Makefile
cuda11_6/gcc10/: Dockerfile  Makefile
cuda11_6/gcc10/mkl/: Dockerfile
cuda11_6/gcc10/oss/: Dockerfile  Makefile
cuda11_7/: Dockerfile  Makefile
cuda11_7/clang13/: Dockerfile  Makefile
cuda11_7/clang13/mkl/: Dockerfile  Makefile
cuda11_7/clang13/oss/: Dockerfile  Makefile
cuda11_7/clang14/: Dockerfile  Makefile
cuda11_7/clang14/mkl/: Dockerfile  Makefile
cuda11_7/clang14/oss/: Dockerfile  Makefile
cuda11_7/gcc11/: Dockerfile  Makefile
cuda11_7/gcc11/mkl/: Dockerfile  Makefile
cuda11_7/gcc11/oss/: Dockerfile  Makefile
doxygen/: Dockerfile  Makefile
examples/: cmake.sh
examples/clang_mpi_omp_offloading/: Makefile  README.md  install_mpi.sh  omp_offloading.cpp
examples/clang_omp_offloading/: Makefile  README.md  omp_offloading_control_thread.cpp  omp_offloading_cublas.cpp  omp_offloading_math.cpp
examples/gcc-omp_offloading/: Makefile  README.md  omp_offloading_cublas.cpp
examples/gcc-openacc/: CMakeLists.txt  Makefile  README.md  acc.cpp  acc_cublas.cpp
examples/gcc_omp_offloading/: Makefile  README.md  omp_offloading.cpp  omp_offloading_math.cpp
examples/gcc_openacc/: acc.cpp  acc_cublas.cpp
examples/gfortran-omp_offloading/: Makefile
examples/gfortran-openacc/: Makefile  README.md
examples/gfortran_omp_offloading/: Makefile  README.md  omp_offloading.f90
examples/gfortran_openacc/: CMakeLists.txt  acc.f90
examples/mpi_clang_omp_offloading/: Makefile  README.md  install_mpi.sh  omp_offloading.cpp  omp_offloading_cublas.cpp  omp_offloading_math.cpp
poetry/: Dockerfile  Makefile
test/: CMakeLists.txt  Makefile
util/: allgebra_get_device_cc.cu
utilities/: .gitignore  Makefile  README.md  allgebra_get_device_cc.cu
